[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://scenes/environment/Tiles.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/environment/TempTiles.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/gameplay/DialogPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/characters/player/RespawnPlate.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/characters/enemies/Enemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/environment/SpaceParallax.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/characters/enemies/Endpoint.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 200 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 1 )
level = "res://scenes/Demo.tscn"
d1 = [ "Press {up}, {down}, {left}, {right} to move. Press {pull} for next dialog.", "You can also rebind keys and change settings in the settings menu. Press {pause}." ]
d2 = [ "Press {pull} to move the respawn orb closer to you.", "The line must be connected for the respawn orb to function.", "If the respawn orb is destroyed, so are you!" ]
d3 = [ "Run into enemies to destroy them!" ]
d4 = [ "That is an endpoint. The enemies are trying to push this button to launch a meteor at earth.", "I think you are ready to take them on." ]

[node name="SpaceParallax" parent="." instance=ExtResource( 7 )]

[node name="Tiles" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 42, 1, 0, 43, 1, 0, 44, 1, 0, 45, 1, 0, 46, 1, 0, 47, 1, 0, 48, 1, 0, 49, 1, 0, 50, 1, 0, 51, 1, 0, 52, 1, 0, 53, 1, 0, 54, 1, 0, 55, 1, 0, 56, 1, 0, 57, 1, 0, 58, 1, 0, 59, 1, 0, 60, 1, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 64, 1, 0, 65, 1, 0, 66, 1, 0, 67, 1, 0, 68, 1, 0, 69, 1, 0, 70, 1, 0, 71, 1, 0, 72, 1, 0, 73, 1, 0, 74, 1, 0, 75, 1, 0, 76, 1, 0, 77, 1, 0, 78, 1, 0, 79, 1, 0, 80, 1, 0, 81, 1, 0, 82, 1, 0, 83, 1, 0, 84, 1, 0, 85, 1, 0, 86, 1, 0, 87, 1, 0, 88, 1, 0, 89, 1, 0, 90, 1, 0, 91, 1, 0, 92, 1, 0, 93, 1, 0, 94, 1, 0, 95, 1, 0, 96, 1, 0, 97, 1, 0, 98, 1, 0, 99, 1, 0, 100, 1, 0, 101, 1, 0, 102, 1, 0, 103, 1, 0, 104, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 65566, 1, 0, 65567, 1, 0, 65568, 1, 0, 65569, 1, 0, 65570, 1, 0, 65571, 1, 0, 65572, 1, 0, 65573, 1, 0, 65574, 1, 0, 65575, 1, 0, 65576, 1, 0, 65577, 1, 0, 65578, 1, 0, 65579, 1, 0, 65580, 1, 0, 65581, 1, 0, 65582, 1, 0, 65583, 1, 0, 65584, 1, 0, 65585, 1, 0, 65586, 1, 0, 65587, 1, 0, 65588, 1, 0, 65589, 1, 0, 65590, 1, 0, 65591, 1, 0, 65592, 1, 0, 65593, 1, 0, 65594, 1, 0, 65595, 1, 0, 65596, 1, 0, 65597, 1, 0, 65598, 1, 0, 65599, 1, 0, 65600, 1, 0, 65601, 1, 0, 65602, 1, 0, 65603, 1, 0, 65604, 1, 0, 65605, 1, 0, 65606, 1, 0, 65607, 1, 0, 65608, 1, 0, 65609, 1, 0, 65610, 1, 0, 65611, 1, 0, 65612, 1, 0, 65613, 1, 0, 65614, 1, 0, 65615, 1, 0, 65616, 1, 0, 65617, 1, 0, 65618, 1, 0, 65619, 1, 0, 65620, 1, 0, 65621, 1, 0, 65622, 1, 0, 65623, 1, 0, 65624, 1, 0, 65625, 1, 0, 65626, 1, 0, 65627, 1, 0, 65628, 1, 0, 65629, 1, 0, 65630, 1, 0, 65631, 1, 0, 65632, 1, 0, 65633, 1, 0, 65634, 1, 0, 65635, 1, 0, 65636, 1, 0, 65637, 1, 0, 65638, 1, 0, 65639, 1, 0, 65640, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, -1610612728, 0, 131072, 1610612743, 0, 131073, 1610612743, 0, 131074, 1610612743, 0, 131075, 1610612743, 0, 131076, 1610612743, 0, 131077, 1610612743, 0, 131078, 1610612743, 0, 131079, 1610612743, 0, 131080, 1610612743, 0, 131081, 1610612743, 0, 131082, 1610612743, 0, 131083, 1610612743, 0, 131084, 1610612743, 0, 131085, 1610612743, 0, 131086, 1610612743, 0, 131087, 1610612743, 0, 131088, 1610612743, 0, 131089, 1610612743, 0, 131090, 1610612743, 0, 131091, 1610612743, 0, 131092, 1610612743, 0, 131093, 1610612743, 0, 131094, 1610612743, 0, 131095, 1610612743, 0, 131096, 1610612743, 0, 131097, 1610612743, 0, 131098, 1610612743, 0, 131099, 1610612743, 0, 131100, 1610612743, 0, 131101, 1610612743, 0, 131102, 1610612743, 0, 131103, 1610612743, 0, 131104, 1610612743, 0, 131105, 1610612743, 0, 131106, 1610612743, 0, 131107, 1610612743, 0, 131108, 1610612743, 0, 131109, 1610612743, 0, 131110, 1610612743, 0, 131111, 1610612743, 0, 131112, 1610612743, 0, 131113, 1610612743, 0, 131114, 1610612743, 0, 131115, 1610612743, 0, 131116, 1610612743, 0, 131117, 1610612743, 0, 131118, 1610612743, 0, 131119, 1610612743, 0, 131120, 1610612743, 0, 131121, 1610612743, 0, 131122, 1610612743, 0, 131123, 1610612743, 0, 131124, 1610612743, 0, 131125, 1610612743, 0, 131126, 1610612743, 0, 131127, 1610612743, 0, 131128, 1610612743, 0, 131129, 1610612743, 0, 131130, 1610612743, 0, 131131, 1610612743, 0, 131132, 1610612743, 0, 131133, 1610612743, 0, 131134, 1610612743, 0, 131135, 1610612743, 0, 131136, 1610612743, 0, 131137, 1610612743, 0, 131138, 1610612743, 0, 131139, 1610612743, 0, 131140, 1610612743, 0, 131141, 1610612743, 0, 131142, 1610612743, 0, 131143, 1610612743, 0, 131144, 1610612743, 0, 131145, 1610612743, 0, 131146, 1610612743, 0, 131147, 1610612743, 0, 131148, 1610612743, 0, 131149, 1610612743, 0, 131150, 1610612743, 0, 131151, 1610612743, 0, 131152, 1610612743, 0, 131153, 1610612743, 0, 131154, 1610612743, 0, 131155, 1610612743, 0, 131156, 1610612743, 0, 131157, 1610612743, 0, 131158, 1610612743, 0, 131159, 1610612743, 0, 131160, 1610612743, 0, 131161, 1610612743, 0, 131162, 1610612743, 0, 131163, 1610612743, 0, 131164, 1610612743, 0, 131165, 1610612743, 0, 131166, 1610612743, 0, 131167, 1610612743, 0, 131168, 1610612743, 0, 131169, 1610612743, 0, 131170, 1610612743, 0, 131171, 1610612743, 0, 131172, 1610612743, 0, 131173, 1610612743, 0, 131174, 1610612744, 0, 131175, 1, 0, 131176, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, -1610612729, 0, 196608, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 4, 0, 196632, 4, 0, 196633, 4, 0, 196634, 4, 0, 196635, 4, 0, 196636, 4, 0, 196637, 4, 0, 196638, 4, 0, 196639, 4, 0, 196640, 4, 0, 196641, 4, 0, 196642, 4, 0, 196643, 4, 0, 196644, 4, 0, 196645, 4, 0, 196646, 4, 0, 196647, 4, 0, 196648, 4, 0, 196649, 4, 0, 196650, 4, 0, 196651, 4, 0, 196652, 4, 0, 196653, 4, 0, 196654, 4, 0, 196655, 4, 0, 196656, 4, 0, 196657, 4, 0, 196658, 4, 0, 196659, 4, 0, 196660, 4, 0, 196661, 4, 0, 196662, 4, 0, 196663, 4, 0, 196664, 4, 0, 196665, 4, 0, 196666, 4, 0, 196667, 4, 0, 196668, 4, 0, 196669, 4, 0, 196670, 4, 0, 196671, 4, 0, 196672, 4, 0, 196673, 4, 0, 196674, 4, 0, 196675, 4, 0, 196676, 4, 0, 196677, 4, 0, 196678, 4, 0, 196679, 4, 0, 196680, 4, 0, 196681, 4, 0, 196682, 4, 0, 196683, 4, 0, 196684, 4, 0, 196685, 4, 0, 196686, 4, 0, 196687, 4, 0, 196688, 4, 0, 196689, 4, 0, 196690, 4, 0, 196691, 4, 0, 196692, 4, 0, 196693, 4, 0, 196694, 4, 0, 196695, 4, 0, 196696, 4, 0, 196697, 4, 0, 196698, 4, 0, 196699, 4, 0, 196700, 4, 0, 196701, 4, 0, 196702, 4, 0, 196703, 4, 0, 196704, 4, 0, 196705, 4, 0, 196706, 4, 0, 196707, 4, 0, 196708, 4, 0, 196709, 4, 0, 196710, -1073741817, 0, 196711, 1, 0, 196712, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, -1610612729, 0, 262144, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 262168, 4, 0, 262169, 4, 0, 262170, 4, 0, 262171, 4, 0, 262172, 4, 0, 262173, 4, 0, 262174, 4, 0, 262175, 4, 0, 262176, 4, 0, 262177, 4, 0, 262178, 4, 0, 262179, 4, 0, 262180, 4, 0, 262181, 4, 0, 262182, 4, 0, 262183, 4, 0, 262184, 4, 0, 262185, 4, 0, 262186, 4, 0, 262187, 4, 0, 262188, 4, 0, 262189, 4, 0, 262190, 4, 0, 262191, 4, 0, 262192, 4, 0, 262193, 4, 0, 262194, 4, 0, 262195, 4, 0, 262196, 4, 0, 262197, 4, 0, 262198, 4, 0, 262199, 4, 0, 262200, 4, 0, 262201, 4, 0, 262202, 4, 0, 262203, 4, 0, 262204, 4, 0, 262205, 4, 0, 262206, 4, 0, 262207, 4, 0, 262208, 4, 0, 262209, 4, 0, 262210, 4, 0, 262211, 4, 0, 262212, 4, 0, 262213, 4, 0, 262214, 4, 0, 262215, 4, 0, 262216, 4, 0, 262217, 4, 0, 262218, 4, 0, 262219, 4, 0, 262220, 4, 0, 262221, 4, 0, 262222, 4, 0, 262223, 4, 0, 262224, 4, 0, 262225, 4, 0, 262226, 4, 0, 262227, 4, 0, 262228, 4, 0, 262229, 4, 0, 262230, 4, 0, 262231, 4, 0, 262232, 4, 0, 262233, 4, 0, 262234, 4, 0, 262235, 4, 0, 262236, 4, 0, 262237, 4, 0, 262238, 4, 0, 262239, 4, 0, 262240, 4, 0, 262241, 4, 0, 262242, 4, 0, 262243, 4, 0, 262244, 4, 0, 262245, 4, 0, 262246, -1073741817, 0, 262247, 1, 0, 262248, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 8, 0, 327680, 7, 0, 327681, 7, 0, 327682, 7, 0, 327683, 7, 0, 327684, 7, 0, 327685, 7, 0, 327686, 7, 0, 327687, 7, 0, 327688, 7, 0, 327689, 7, 0, 327690, 7, 0, 327691, 7, 0, 327692, 7, 0, 327693, 7, 0, 327694, 7, 0, 327695, 7, 0, 327696, 7, 0, 327697, 7, 0, 327698, 7, 0, 327699, 7, 0, 327700, 7, 0, 327701, 7, 0, 327702, 7, 0, 327703, 7, 0, 327704, 7, 0, 327705, 7, 0, 327706, 7, 0, 327707, 7, 0, 327708, 7, 0, 327709, 7, 0, 327710, 7, 0, 327711, 7, 0, 327712, 7, 0, 327713, 7, 0, 327714, 7, 0, 327715, 7, 0, 327716, 7, 0, 327717, 7, 0, 327718, 7, 0, 327719, 7, 0, 327720, 7, 0, 327721, 7, 0, 327722, 7, 0, 327723, 7, 0, 327724, 7, 0, 327725, 7, 0, 327726, 7, 0, 327727, 7, 0, 327728, 7, 0, 327729, 7, 0, 327730, 7, 0, 327731, 7, 0, 327732, 7, 0, 327733, 7, 0, 327734, 7, 0, 327735, 7, 0, 327736, 7, 0, 327737, 7, 0, 327738, 7, 0, 327739, 7, 0, 327740, 7, 0, 327741, 7, 0, 327742, 7, 0, 327743, 7, 0, 327744, 7, 0, 327745, 7, 0, 327746, 7, 0, 327747, 7, 0, 327748, 7, 0, 327749, 7, 0, 327750, 7, 0, 327751, 7, 0, 327752, 7, 0, 327753, 7, 0, 327754, 7, 0, 327755, 7, 0, 327756, 7, 0, 327757, 7, 0, 327758, 7, 0, 327759, 7, 0, 327760, 7, 0, 327761, 7, 0, 327762, 7, 0, 327763, 7, 0, 327764, 7, 0, 327765, 7, 0, 327766, 7, 0, 327767, 7, 0, 327768, 7, 0, 327769, 7, 0, 327770, 7, 0, 327771, 7, 0, 327772, 7, 0, 327773, 7, 0, 327774, 7, 0, 327775, 7, 0, 327776, 7, 0, 327777, 7, 0, 327778, 7, 0, 327779, 7, 0, 327780, 7, 0, 327781, 7, 0, 327782, -1073741816, 0, 327783, 1, 0, 327784, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 1, 0, 393243, 1, 0, 393244, 1, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393248, 1, 0, 393249, 1, 0, 393250, 1, 0, 393251, 1, 0, 393252, 1, 0, 393253, 1, 0, 393254, 1, 0, 393255, 1, 0, 393256, 1, 0, 393257, 1, 0, 393258, 1, 0, 393259, 1, 0, 393260, 1, 0, 393261, 1, 0, 393262, 1, 0, 393263, 1, 0, 393264, 1, 0, 393265, 1, 0, 393266, 1, 0, 393267, 1, 0, 393268, 1, 0, 393269, 1, 0, 393270, 1, 0, 393271, 1, 0, 393272, 1, 0, 393273, 1, 0, 393274, 1, 0, 393275, 1, 0, 393276, 1, 0, 393277, 1, 0, 393278, 1, 0, 393279, 1, 0, 393280, 1, 0, 393281, 1, 0, 393282, 1, 0, 393283, 1, 0, 393284, 1, 0, 393285, 1, 0, 393286, 1, 0, 393287, 1, 0, 393288, 1, 0, 393289, 1, 0, 393290, 1, 0, 393291, 1, 0, 393292, 1, 0, 393293, 1, 0, 393294, 1, 0, 393295, 1, 0, 393296, 1, 0, 393297, 1, 0, 393298, 1, 0, 393299, 1, 0, 393300, 1, 0, 393301, 1, 0, 393302, 1, 0, 393303, 1, 0, 393304, 1, 0, 393305, 1, 0, 393306, 1, 0, 393307, 1, 0, 393308, 1, 0, 393309, 1, 0, 393310, 1, 0, 393311, 1, 0, 393312, 1, 0, 393313, 1, 0, 393314, 1, 0, 393315, 1, 0, 393316, 1, 0, 393317, 1, 0, 393318, 1, 0, 393319, 1, 0, 393320, 1, 0, 524285, 1, 0, 524286, 1, 0, 524287, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 1, 0, 458779, 1, 0, 458780, 1, 0, 458781, 1, 0, 458782, 1, 0, 458783, 1, 0, 458784, 1, 0, 458785, 1, 0, 458786, 1, 0, 458787, 1, 0, 458788, 1, 0, 458789, 1, 0, 458790, 1, 0, 458791, 1, 0, 458792, 1, 0, 458793, 1, 0, 458794, 1, 0, 458795, 1, 0, 458796, 1, 0, 458797, 1, 0, 458798, 1, 0, 458799, 1, 0, 458800, 1, 0, 458801, 1, 0, 458802, 1, 0, 458803, 1, 0, 458804, 1, 0, 458805, 1, 0, 458806, 1, 0, 458807, 1, 0, 458808, 1, 0, 458809, 1, 0, 458810, 1, 0, 458811, 1, 0, 458812, 1, 0, 458813, 1, 0, 458814, 1, 0, 458815, 1, 0, 458816, 1, 0, 458817, 1, 0, 458818, 1, 0, 458819, 1, 0, 458820, 1, 0, 458821, 1, 0, 458822, 1, 0, 458823, 1, 0, 458824, 1, 0, 458825, 1, 0, 458826, 1, 0, 458827, 1, 0, 458828, 1, 0, 458829, 1, 0, 458830, 1, 0, 458831, 1, 0, 458832, 1, 0, 458833, 1, 0, 458834, 1, 0, 458835, 1, 0, 458836, 1, 0, 458837, 1, 0, 458838, 1, 0, 458839, 1, 0, 458840, 1, 0, 458841, 1, 0, 458842, 1, 0, 458843, 1, 0, 458844, 1, 0, 458845, 1, 0, 458846, 1, 0, 458847, 1, 0, 458848, 1, 0, 458849, 1, 0, 458850, 1, 0, 458851, 1, 0, 458852, 1, 0, 458853, 1, 0, 458854, 1, 0, 458855, 1, 0, 458856, 1, 0 )

[node name="TempTiles" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( 65531, 0, 1, 65532, 0, 196610, 65533, 0, 196610, 65534, 0, 196610, 65535, 0, 196610, 0, 0, 196610, 1, 0, 196610, 2, 0, 196610, 3, 0, 196610, 4, 0, 196610, 5, 0, 196610, 6, 0, 196610, 7, 0, 196610, 8, 0, 196610, 9, 0, 196610, 10, 0, 196610, 11, 0, 196610, 12, 0, 196610, 13, 0, 196610, 14, 0, 196610, 15, 0, 196610, 16, 0, 196610, 17, 0, 196610, 18, 0, 196610, 19, 0, 196610, 20, 0, 196610, 21, 0, 196610, 22, 0, 196610, 23, 0, 196610, 24, 0, 196610, 25, 0, 196610, 26, 0, 196610, 27, 0, 196610, 28, 0, 196610, 29, 0, 196610, 30, 0, 196610, 31, 0, 196610, 32, 0, 196610, 33, 0, 196610, 34, 0, 196610, 35, 0, 196610, 36, 0, 196610, 37, 0, 196610, 38, 0, 196610, 39, 0, 196610, 40, 0, 196610, 41, 0, 196610, 42, 0, 196610, 43, 0, 196610, 44, 0, 196610, 45, 0, 196610, 46, 0, 196610, 47, 0, 196610, 48, 0, 196610, 49, 0, 196610, 50, 0, 196610, 51, 0, 196610, 52, 0, 196610, 53, 0, 196610, 54, 0, 196610, 55, 0, 196610, 56, 0, 196610, 57, 0, 196610, 58, 0, 196610, 59, 0, 196610, 60, 0, 196610, 61, 0, 196610, 62, 0, 196610, 63, 0, 196610, 64, 0, 196610, 65, 0, 196610, 66, 0, 196610, 67, 0, 196610, 68, 0, 196610, 69, 0, 196610, 70, 0, 196610, 71, 0, 196610, 72, 0, 196610, 73, 0, 196610, 74, 0, 196610, 75, 0, 196610, 76, 0, 196610, 77, 0, 196610, 78, 0, 196610, 79, 0, 196610, 80, 0, 196610, 81, 0, 196610, 82, 0, 196610, 83, 0, 196610, 84, 0, 196610, 85, 0, 196610, 86, 0, 196610, 87, 0, 196610, 88, 0, 196610, 89, 0, 196610, 90, 0, 196610, 91, 0, 196610, 92, 0, 196610, 93, 0, 196610, 94, 0, 196610, 95, 0, 196610, 96, 0, 196610, 97, 0, 196610, 98, 0, 196610, 99, 0, 196610, 100, 0, 196610, 101, 0, 196610, 102, 0, 196610, 103, 0, 196610, 104, 0, 196610, 105, 0, 196610, 106, 0, 196610, 107, 0, 196610, 108, 0, 196610, 109, 0, 196610, 110, 0, 196610, 111, 0, 196610, 112, 0, 196610, 113, 0, 196610, 114, 0, 196610, 115, 0, 196610, 116, 0, 196610, 117, 0, 196610, 118, 0, 196610, 119, 0, 196610, 120, 0, 196610, 121, 0, 196610, 122, 0, 196610, 123, 0, 196610, 124, 0, 196610, 125, 0, 196610, 126, 0, 196610, 127, 0, 196610, 128, 0, 196610, 129, 0, 196610, 130, 0, 196610, 131, 0, 196610, 132, 0, 196610, 133, 0, 196610, 134, 0, 196610, 135, 0, 196610, 136, 0, 196610, 137, 0, 196610, 138, 0, 196610, 139, 0, 196610, 140, 0, 196610, 141, 0, 196610, 142, 0, 196610, 143, 0, 196610, 144, 0, 196610, 145, 0, 196610, 146, 0, 196610, 147, 0, 196610, 148, 0, 196610, 149, 0, 196610, 150, 0, 196610, 151, 0, 196610, 152, 0, 3, 131067, 0, 65536, 65688, 0, 65536, 196603, 0, 65536, 131224, 0, 65536, 262139, 0, 65536, 196760, 0, 65536, 327675, 0, 65536, 262296, 0, 65536, 393211, 0, 65536, 327832, 0, 65536, 458747, 0, 65536, 393368, 0, 65536, 524283, 0, 65536, 458904, 0, 65536, 589819, 0, 65536, 524440, 0, 65536, 655355, 0, 65536, 589976, 0, 65536, 720891, 0, 65536, 655512, 0, 65536, 786427, 0, 131073, 786428, 0, 196610, 786429, 0, 196610, 786430, 0, 196610, 786431, 0, 196610, 720896, 0, 196610, 720897, 0, 196610, 720898, 0, 196610, 720899, 0, 196610, 720900, 0, 196610, 720901, 0, 196610, 720902, 0, 196610, 720903, 0, 196610, 720904, 0, 196610, 720905, 0, 196610, 720906, 0, 196610, 720907, 0, 196610, 720908, 0, 196610, 720909, 0, 196610, 720910, 0, 196610, 720911, 0, 196610, 720912, 0, 196610, 720913, 0, 196610, 720914, 0, 196610, 720915, 0, 196610, 720916, 0, 196610, 720917, 0, 196610, 720918, 0, 196610, 720919, 0, 196610, 720920, 0, 196610, 720921, 0, 196610, 720922, 0, 196610, 720923, 0, 196610, 720924, 0, 196610, 720925, 0, 196610, 720926, 0, 196610, 720927, 0, 196610, 720928, 0, 196610, 720929, 0, 196610, 720930, 0, 196610, 720931, 0, 196610, 720932, 0, 196610, 720933, 0, 196610, 720934, 0, 196610, 720935, 0, 196610, 720936, 0, 196610, 720937, 0, 196610, 720938, 0, 196610, 720939, 0, 196610, 720940, 0, 196610, 720941, 0, 196610, 720942, 0, 196610, 720943, 0, 196610, 720944, 0, 196610, 720945, 0, 196610, 720946, 0, 196610, 720947, 0, 196610, 720948, 0, 196610, 720949, 0, 196610, 720950, 0, 196610, 720951, 0, 196610, 720952, 0, 196610, 720953, 0, 196610, 720954, 0, 196610, 720955, 0, 196610, 720956, 0, 196610, 720957, 0, 196610, 720958, 0, 196610, 720959, 0, 196610, 720960, 0, 196610, 720961, 0, 196610, 720962, 0, 196610, 720963, 0, 196610, 720964, 0, 196610, 720965, 0, 196610, 720966, 0, 196610, 720967, 0, 196610, 720968, 0, 196610, 720969, 0, 196610, 720970, 0, 196610, 720971, 0, 196610, 720972, 0, 196610, 720973, 0, 196610, 720974, 0, 196610, 720975, 0, 196610, 720976, 0, 196610, 720977, 0, 196610, 720978, 0, 196610, 720979, 0, 196610, 720980, 0, 196610, 720981, 0, 196610, 720982, 0, 196610, 720983, 0, 196610, 720984, 0, 196610, 720985, 0, 196610, 720986, 0, 196610, 720987, 0, 196610, 720988, 0, 196610, 720989, 0, 196610, 720990, 0, 196610, 720991, 0, 196610, 720992, 0, 196610, 720993, 0, 196610, 720994, 0, 196610, 720995, 0, 196610, 720996, 0, 196610, 720997, 0, 196610, 720998, 0, 196610, 720999, 0, 196610, 721000, 0, 196610, 721001, 0, 196610, 721002, 0, 196610, 721003, 0, 196610, 721004, 0, 196610, 721005, 0, 196610, 721006, 0, 196610, 721007, 0, 196610, 721008, 0, 196610, 721009, 0, 196610, 721010, 0, 196610, 721011, 0, 196610, 721012, 0, 196610, 721013, 0, 196610, 721014, 0, 196610, 721015, 0, 196610, 721016, 0, 196610, 721017, 0, 196610, 721018, 0, 196610, 721019, 0, 196610, 721020, 0, 196610, 721021, 0, 196610, 721022, 0, 196610, 721023, 0, 196610, 721024, 0, 196610, 721025, 0, 196610, 721026, 0, 196610, 721027, 0, 196610, 721028, 0, 196610, 721029, 0, 196610, 721030, 0, 196610, 721031, 0, 196610, 721032, 0, 196610, 721033, 0, 196610, 721034, 0, 196610, 721035, 0, 196610, 721036, 0, 196610, 721037, 0, 196610, 721038, 0, 196610, 721039, 0, 196610, 721040, 0, 196610, 721041, 0, 196610, 721042, 0, 196610, 721043, 0, 196610, 721044, 0, 196610, 721045, 0, 196610, 721046, 0, 196610, 721047, 0, 196610, 721048, 0, 131075 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogPlayer" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="RespawnPlate" parent="." instance=ExtResource( 5 )]
position = Vector2( 9, 155 )

[node name="Enemy" parent="." instance=ExtResource( 6 )]
position = Vector2( 1297, 142 )

[node name="Enemy2" parent="." instance=ExtResource( 6 )]
position = Vector2( 1891, 58 )

[node name="Enemy3" parent="." instance=ExtResource( 6 )]
position = Vector2( 1893, 101 )

[node name="Enemy4" parent="." instance=ExtResource( 6 )]
position = Vector2( 1894, 148 )

[node name="Enemy5" parent="." instance=ExtResource( 6 )]
position = Vector2( 1895, 196 )

[node name="Enemy6" parent="." instance=ExtResource( 6 )]
position = Vector2( 1897, 239 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 309, 134 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 944, 134 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 2216, 134 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 1 )

[node name="Endpoint" parent="." instance=ExtResource( 8 )]
position = Vector2( 2314, 134 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered" flags=6]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered" flags=6]
[connection signal="body_entered" from="Area2D3" to="." method="_on_Area2D3_body_entered" flags=6]
